# dexctl

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/debian/: changelog  control  copyright
packaging/homebrew/: dexctl.rb  dexctl.rb.in
packaging/scripts/: build-apt-repo.py  build-deb.sh  publish-homebrew-tap.sh  render-homebrew-formula.py
src/dexctl/: app.py  cli.py  render.py  ui.py
tests/: helpers.py  test_adapters.py  test_app.py  test_cli.py  test_packaging.py  test_ralph_account_routing.py  test_render.py  test_ui.py
